@@ -1,6 +1,7 @@
 package com.f012r.naverbooking.domain.reservations.service;
 
 import com.f012r.naverbooking.domain.reservations.dto.ReservationInfoResponse;
+import com.f012r.naverbooking.domain.reservations.dto.UserInfoResponse;
 import com.f012r.naverbooking.domain.reservations.entity.ReservationInfo;
 import com.f012r.naverbooking.domain.reservations.repository.ReservationInfoRepository;
 import com.f012r.naverbooking.global.exception.custom.EmptyEmailException;
@@ -11,7 +12,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,19 +21,39 @@ public class ReservationService {
 
     public List<ReservationInfoResponse> getReservationsByEmail(String email) {
 
-        if (email == null || email.isEmpty()) {
-            throw new EmptyEmailException(ResponseCode.EmptyEmailException);
-        }
-
-        if (!EmailValidator.isValid(email)) {
-            throw new InvalidEmailException(ResponseCode.InvalidEmailException);
-        }
+        validateEmail(email);
 
         List<ReservationInfo> reservations = reservationInfoRepository.findByReservationEmail(email);
 
         return reservations.stream()
                 .map(ReservationInfoResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    public UserInfoResponse getUserInfoByEmail(String email) {
+
+        validateEmail(email);
+
+        List<ReservationInfo> reservations = reservationInfoRepository.findByReservationEmail(email);
+
+        if (reservations.isEmpty()) {
+            return null;
+        }
+
+        ReservationInfo firstReservation = reservations.get(0);
+
+        return UserInfoResponse.builder()
+                .reservationName(firstReservation.getReservationName())
+                .reservationTel(firstReservation.getReservationTel())
+                .reservationEmail(firstReservation.getReservationEmail())
+                .build();
+    }
+
+    private void validateEmail(String email) {
+        if (email == null || email.isEmpty()) {
+            throw new EmptyEmailException(ResponseCode.EmptyEmailException);
+        } else if (!EmailValidator.isValid(email)) {
+            throw new InvalidEmailException(ResponseCode.InvalidEmailException);
+        }
+    }
 }
